# PokerTurney

./: CMakeLists.txt  Makefile  README.md
include/: addplayerdialog.h  assignplayersdialog.h  createtournamentdialog.h  database.h  mainwindow.h  player.h  playerresultdialog.h  playertournamenthistorydialog.h  tournament.h
src/: addplayerdialog.cpp  addplayerdialog.ui  assignplayersdialog.cpp  assignplayersdialog.ui  createtournamentdialog.cpp  createtournamentdialog.ui  database.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  player.cpp  playerresultdialog.cpp  playerresultdialog.ui  playertournamenthistorydialog.cpp  playertournamenthistorydialog.ui  tournament.cpp
